package dev.rick.gymtracker2024.enums;

public enum MuscleGroup {
    BICEPS,
    TRAPS,
    BACK,
    ABS,
    CALVES,
    FOREARMS,
    GLUTES,
    HAMSTRINGS,
    LATS,
    SHOULDERS,
    TRICEPS,
    QUADS,
    CHEST,
    OBLIQUES,
    HANDS,
    FEET,
    NECK
}
