package dev.rick.gymtracker2024.enums;

public enum WorkoutStatus {
    BAD, OK, GOOD, PERFECT
}
